--- a/.github/workflows/rom_dumper.yml
+++ b/.github/workflows/rom_dumper.yml
@@ -15,288 +15,47 @@ on:
         description: 'Stock ROM Link'
         required: true
         default: ''
-      UP_GITHUB:
-        description: 'Upload Firmware Dump To Github'
-        required: true
-        default: 'false'
-        type: boolean
-      GENERATE_VENDOR:
-        description: 'Create Vendor Tree'
-        required: true
-        default: 'false'
-        type: boolean
-      UPLOAD_LINEAGE_DT:
-        description: 'Upload LineageOS tree'
-        required: true
-        default: 'false'
-        type: boolean
-      UPLOAD_TWRP_DT:
-        description: 'Upload TWRP tree'
-        required: true
-        default: 'false'
-        type: boolean
 
 jobs:
   dump:
     name: Auto Firmware Dumper
-    if: github.event.repository.owner.id == github.event.sender.id
     runs-on: ubuntu-latest
     env:
-      GITHUB_TOKEN: ${{ secrets.GTOKEN }}
-      TWT: ${{ github.event.inputs.UPLOAD_TWRP_DT }}
-      LOT: ${{ github.event.inputs.UPLOAD_LINEAGE_DT }}
-      GVT: ${{ github.event.inputs.GENERATE_VENDOR }}
-      FUR: ${{ github.event.inputs.FIRMWARE_URL }}
-      UN: ${{ github.event.inputs.USER_NAME }}
-      UEM: ${{ github.event.inputs.USER_EMAIL }}
-      UGT: ${{ github.event.inputs.UP_GITHUB }}
-    permissions:
-      contents: write
+      FIRMWARE_URL: ${{ github.event.inputs.FIRMWARE_URL }}
+      USER_NAME: ${{ github.event.inputs.USER_NAME }}
+      USER_EMAIL: ${{ github.event.inputs.USER_EMAIL }}
+      SSH_KEY: ${{ secrets.SSH_KEY }}
+      SSH_PUBKEY: ${{ secrets.SSH_PUBKEY }}
+      SSH_KEY: ${{ secrets.SSH_KEY }}
+      KNOWN_HOSTS: ${{ secrets.KNOWN_HOSTS }}
+      GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
+      GITLAB_ORG: ${{ secrets.GIT_ORG }}
+      TG_TOKEN: ${{ secrets.TG_TOKEN }}
+      CHAT_ID: ${{ secrets.CHAT_ID }}
+    permissions: write-all
     steps:
     - name: Check Out
       uses: actions/checkout@v4
 
     - name: Update Packages
-      run: |
-        sudo apt update \
-        && sudo apt -y upgrade \
-        && sudo apt -y install cpio aria2 git python3 neofetch tar gzip
-
-    - name: Setup GithubCLI
-      run: |
-        type -p curl >/dev/null || (sudo apt update && sudo apt install curl -y)
-        curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \
-        && sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \
-        && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
-        && sudo apt update \
-        && sudo apt install gh -y
+      run: sudo apt -y install cpio aria2 git python3 neofetch tar gzip
 
     - name: Clone and Setup DumprX
       run: |
         mkdir -p Auto-Dumper && cd Auto-Dumper
         git clone https://github.com/DumprX/DumprX.git && cd DumprX
         bash setup.sh
-        pip3 install aospdtgen
-        pip3 install twrpdtgen
+        sudo echo "${SSH_KEY}" >> /root/.ssh/id_rsa
+        sudo echo "${SSH_PUBKEY}" >> /root/.ssh/id_rsa.pub
+        sudo echo "${KNOWN_HOSTS}" >> /root/.ssh/known_hosts
 
     - name: Creating Dump
       run: |
         cd ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX
-        bash dumper.sh "${{ env.FUR }}"
-
-    - name: Setting up Git
-      run: |
-        git config --global user.name "${{ env.UN }}"
-        git config --global user.email "${{ env.UEM }}"
-        unset GITHUB_TOKEN
-        gh auth login --with-token <<< "${{ secrets.GTOKEN }}"
-
-    - name: Uploading ROM Dump
-      run: |
-        cd ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/out
-        if [ -d system ]; then
-           echo " "
-        else
-           echo "Failed!";
-           cd ${GITHUB_WORKSPACE}/Auto-Dumper
-           rm -rf DumprX
-           exit 1;
-        fi;
-        los_dir="lineage-device-tree"
-        if [ -d "$los_dir" ]; then
-           cp -r $los_dir ${GITHUB_WORKSPACE}/Auto-Dumper
-        else
-           echo "Lineage device tree not found!";
-        fi;
-        tw_dir="twrp-device-tree"
-        if [ -d "$tw_dir" ]; then
-           cp -r $tw_dir ${GITHUB_WORKSPACE}/Auto-Dumper
-        else
-           echo "TWRP device tree not found!";
-           unset tw_dir
-        fi;
-        if [ -d vendor ]; then
-           cd vendor
-        else
-           cd system
-           [ -d system ] && cd system
-        fi
-        codename=$(grep "ro.product.vendor.device=" build.prop | cut -d'=' -f2)
-        brand=$(grep "ro.product.vendor.brand=" build.prop | cut -d'=' -f2)
-        if [ "$codename" == "" ]; then
-           unset codename
-           codename=$(grep "ro.vendor.product.device=" build.prop | cut -d'=' -f2)
-           if [ "$codename" == "" ]; then
-              unset codename
-              codename=$(grep "ro.product.device=" build.prop | cut -d'=' -f2)
-           fi
-        fi
-        if [ "$brand" == "" ]; then
-           unset brand
-           brand=$(grep "ro.vendor.product.brand=" build.prop | cut -d'=' -f2)
-           if [ "$brand" == "" ]; then
-              unset brand
-              brand=$(grep "ro.product.brand=" build.prop | cut -d'=' -f2)
-           fi
-        fi
-        new_brand=$(echo "$brand" | tr 'A-Z' 'a-z')
-        unset brand
-        brand=$new_brand
-        new_codename=$(echo "$codename")
-        codename=$(echo "$new_codename" | tr -d '[:space:]')
-        cd ${GITHUB_WORKSPACE}/Auto-Dumper
-        echo "$codename" >> codename.txt
-        echo "$brand" >> brand.txt
-        cd ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/out
-        cd system
-        if [ -d system ]; then
-           cd system
-           version=$(grep "ro.build.version.release_or_codename=" build.prop | cut -d'=' -f2)
-           fingerprint=$(grep "ro.system.build.fingerprint=" build.prop | cut -d'=' -f2)
-           cd ${GITHUB_WORKSPACE}/Auto-Dumper
-           echo "$version" >> version.txt
-           echo "$fingerprint" >> fingerprint.txt
-           cd ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/out
-        else
-           version=$(grep "ro.build.version.release_or_codename=" build.prop | cut -d'=' -f2)
-           fingerprint=$(grep "ro.system.build.fingerprint=" build.prop | cut -d'=' -f2)
-           cd ${GITHUB_WORKSPACE}/Auto-Dumper
-           echo "$version" >> version.txt
-           echo "$fingerprint" >> fingerprint.txt
-           cd ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/out
-        fi
-        rm -rf .git
-        echo "Compressing images..."
-        max_size=48000000
-        images=("recovery.img" "boot.img" "vendor_boot.img" "init_boot.img" "dtbo.img" "dtb.img")
-        for pf in ${images[@]}; do
-           if [ -f $pf ]; then
-              if [[ $(stat -c %s $pf) -gt $max_size ]]; then
-                 cp $pf ${GITHUB_WORKSPACE}/Auto-Dumper
-                 gzip -f $pf
-              fi
-           fi
-        done
-        find ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/out -type f -size +50M -delete -exec echo "Deleted: "{} \;
-        dat=$(date +%Y%m%d)
-        description="Dump for $brand $codename"
-        description=$(echo "$description" | tr -d '\n\r\t')
-        if [ "$UGT" == "true" ]; then
-            cd ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/out
-            git config http.postBuffer 524288000
-            git init
-            git add -A
-            git commit -asm "Dump for $brand $codename"
-            git branch -M dump_"$brand"_"$codename"
-            git gc
-            gh repo create dump_"$brand"_"$codename" --public --description="$description" --source=.
-            git remote add origin https://${UN}:${GITHUB_TOKEN}@github.com/${UN}/dump_${brand}_${codename}.git
-            git push -u origin dump_"$brand"_"$codename"
-        fi
-        cd ${GITHUB_WORKSPACE}/Auto-Dumper
-        mkdir vnd_project
-        mkdir vnd_project/dump
-        mkdir -p vnd_project/android/device/"$brand"/"$codename"
-        cd DumprX/out
-        if [ -d "$los_dir" ]; then
-           mv ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/out/lineage-device-tree/* ${GITHUB_WORKSPACE}/Auto-Dumper/vnd_project/android/device/"$brand"/"$codename"
-           rm -rf $los_dir
-        else
-           echo "LINEAGEOS DEVİCE TREE NOT FOUND!"
-           echo "IF REQUESTED, VENDOR TREE WILL NOT BE CREATED"
-        fi
-        mv ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/out/* ${GITHUB_WORKSPACE}/Auto-Dumper/vnd_project/dump
-
-    - name: Create vendor tree
-      if: |
-        env.GVT == 'true'
-      run: |
-        cd ${GITHUB_WORKSPACE}/Auto-Dumper
-        codename=$(cat codename.txt)
-        brand=$(cat brand.txt)
-        cd vnd_project
-        echo "Controlling LineageOS device tree..."
-        if [ -d android/device/"$brand"/"$codename" ]; then
-           echo "Device tree found"
-        else
-           echo "LINEAGEOS DEVİCE TREE NOT FOUND!"
-           exit 1
-        fi
-        echo "Clonning LineageOS tools..."
-        git clone --depth=1 https://github.com/LineageOS/android_tools_extract-utils -b lineage-20.0 ./android/tools/extract-utils
-        echo "Done cloning extract-utils."
-        git clone --depth=1  https://github.com/LineageOS/android_prebuilts_extract-tools -b lineage-20.0 ./android/prebuilts/extract-tools
-        echo "Done cloning extract-tools."
-        chmod +x android/device/"$brand"/"$codename"/setup-makefiles.sh
-        cd android/device/"$brand"/"$codename"
-        chmod +x extract-files.sh
-        bash extract-files.sh ${GITHUB_WORKSPACE}/Auto-Dumper/vnd_project/dump/
-        echo "Done extracting and making files."
-        echo "Pushing as repository now."
-
-    - name: Uploading Vendor Tree
-      if: |
-        env.GVT == 'true'
-      run: |
-        cd ${GITHUB_WORKSPACE}/Auto-Dumper
-        codename=$(cat codename.txt)
-        brand=$(cat brand.txt)
-        cd vnd_project/android/vendor/"$brand"/"$codename"
-        dat=$(date +%Y%m%d)
-        git init
-        git branch -M vendor-"$codename"-"$dat"
-        git add .
-        git commit -s -m "$codename : initial vendor tree"
-        gh repo create android_vendor_"$brand"_"$codename" --public --description="Vendor tree for $codename" --source=. --remote=origin --push
-        echo "Succesfull"
-        cd ${GITHUB_WORKSPACE}/Auto-Dumper
-        rm -rf DumprX
-        rm -rf vnd_project
-
-    - name: Uploading LineageOS Device Tree
-      if: |
-        env.LOT == 'true'
-      run: |
-        cd ${GITHUB_WORKSPACE}/Auto-Dumper
-        codename=$(cat codename.txt)
-        brand=$(cat brand.txt)
-        cd lineage-device-tree
-        dat=$(date +%Y%m%d)
-        git init
-        git branch -M lineage-"$codename"-"$dat"
-        git add .
-        git commit -s -m "$codename : LineageOS compatible device tree"
-        gh repo create lineage_device_"$brand"_"$codename" --public --description="LineageOS compatible tree for $codename " --source=. --remote=origin --push
-      continue-on-error: true
-
-    - name: Uploading TWRP Device Tree
-      if: |
-        env.TWT == 'true'
-      run: |
-        cd ${GITHUB_WORKSPACE}/Auto-Dumper
-        codename=$(cat codename.txt)
-        brand=$(cat brand.txt)
-        version=$(cat version.txt)
-        cd twrp-device-tree/$brand/$codename
-        dat=$(date +%Y%m%d)
-        [ ! -f BoardConfig.mk ] && cd "$brand"/"$codename"
-        git init
-        git branch -M twrp-"$version"-"$dat"
-        git add .
-        git commit -s -m "$codename : TWRP compatible device tree"
-        gh repo create twrp_device_"$brand"_"$codename" --public --description="TWRP compatible tree for $codename " --source=. --remote=origin --push
-      continue-on-error: true
-
-    - name: Uploading preview of images
-      uses: actions/upload-artifact@v4
-      with: 
-        name: Prewiew images
-        path: |
-          ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/boot.img
-          ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/recovery.img
-          ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/vendor_boot.img
-          ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/init_boot.img
-          ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/dtbo.img
-          ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/dtb.img
-        if-no-files-found: ignore
-      continue-on-error: true
+        echo "${GITLAB_TOKEN}" >> .gitlab_token
+        echo "${GITLAB_ORG}" >> .gitlab_group
+        echo "${TG_TOKEN}" >> .gitlab_token
+        echo "${CHAT_ID}" >> .gitlab_group
+        git config --global user.name "${USER_NAME}"
+        git config --global user.email "${USER_EMAIL}"
+        bash dumper.sh "${FIRMWARE_URL}"
